--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -72,6 +72,20 @@
                     android:gravity="center"
                     android:visibility="gone"
                     />
+
+                <com.android.keyguard.CarrierText
+                    android:id="@+id/statusbar_carrier_text"
+                    android:textAppearance="@style/TextAppearance.StatusBar.Clock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:paddingStart="2dp"
+                    android:paddingEnd="4dp"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    />
+
                 <com.android.systemui.statusbar.StatusBarIconView android:id="@+id/moreIcon"
                     android:layout_width="@dimen/status_bar_icon_size"
                     android:layout_height="match_parent"
