--- a/packages/SystemUI/res/values/tesla_colors.xml
+++ b/packages/SystemUI/res/values/tesla_colors.xml
@@ -25,4 +25,8 @@
     <color name="status_bar_temperature_text_color">#FFFFFFFF</color>
     <color name="status_bar_temperature_location_text_color">#FFFFFFFF</color>
 
+    <!-- Expanded Status Bar Weather Text Colors -->
+    <color name="status_bar_temperature_text_color">#FFFFFFFF</color>
+    <color name="status_bar_temperature_location_text_color">#FFFFFFFF</color>
+
 </resources>
