--- a/core/res/res/values/tesla_symbols.xml
+++ b/core/res/res/values/tesla_symbols.xml
@@ -22,6 +22,9 @@
   <!-- Package Manager -->
   <java-symbol type="array" name="config_disabledComponents" />
 
+  <!-- System update service -->
+  <java-symbol type="array" name="config_forceEnabledComponents" />
+
   <!-- Notification and battery light -->
   <java-symbol type="bool" name="config_intrusiveNotificationLed" />
   <java-symbol type="bool" name="config_multiColorNotificationLed" />
