--- a/packages/DocumentsUI/res/values-night/colors.xml
+++ b/packages/DocumentsUI/res/values-night/colors.xml
@@ -17,4 +17,5 @@
 <resources>
     <color name="item_doc_grid_background">#ff111111</color>
     <color name="item_doc_grid_protect_background">#88ffffff</color>
+    <color name="drawer_roots_background">#ff212121</color>
 </resources>
