--- a/core/res/res/values/tesla_config.xml
+++ b/core/res/res/values/tesla_config.xml
@@ -28,4 +28,7 @@
     <!-- The list of components which should be forced to be enabled. -->
     <string-array name="config_forceEnabledComponents" translatable="false">
     </string-array>
+
+    <!-- Sets whether IME switcher on statusbar should be shown or not. -->
+    <bool name="config_show_IMESwitcher">true</bool>
 </resources>
