Framework: Forward port Long press back to kill app (2/2) Change-Id: Ia88d8a2753e203afb8d6117a643c33127f991c4a

--- a/core/res/res/values/tesla_strings.xml
+++ b/core/res/res/values/tesla_strings.xml
@@ -50,4 +50,7 @@
     <!-- screenshot in the power menu -->
     <string name="powermenu_screenshot">Screenshot</string>
 
+    <!-- Long-press back kill application -->
+    <string name="app_killed_message">Application killed</string>
+
 </resources>
