--- a/core/res/res/values/tesla_symbols.xml
+++ b/core/res/res/values/tesla_symbols.xml
@@ -252,4 +252,9 @@
   <java-symbol type="id" name="busy_dlg_animation" />
   <java-symbol type="id" name="busy_dlg_title" />
   <java-symbol type="layout" name="busy_dlg" />    
+
+  <!-- Kill app back press  -->
+  <java-symbol type="integer" name="config_backKillTimeout" />
+  <java-symbol type="string" name="app_killed_message" />
+
 </resources>
